# Projet_SY40_Final

./: CMakeLists.txt  README.md  client.c
Include/: ipc_utils.h  spectacles.h
Sources/: ipc_utils.c  main.c  spectacles.c
